changed from vh to rem for card height, fixed clipping

--- a/src/App.css
+++ b/src/App.css
@@ -109,9 +109,10 @@ button {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 90vh;
+  height: 30rem;
 }
 #container {
+  margin-left: -30px;
   text-align: center;
   background-color: #ffffff;
   padding: 20px;
@@ -134,4 +135,8 @@ button {
 }
 #container:hover {
   background-color: #a9a6a6;
+}
+#wowTitle {
+  text-align: center;
+  margin-bottom: -50px;
 }
